--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -1,39 +1,22 @@
-/* Portrait tablet and small desktops */
-@media (max-width: 950px) {
-
-}
-
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-    body {
-        overflow-y: visible;
-        height: 100%;
-        main {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-        }
-        .mainDisplay {
-            flex-direction: column;
-            justify-content: space-between;
-            padding: 20px 0;
-            margin: 8% auto;
-            .sell,
-            .buy {
-                width: 100%;
-                height: 100%;
-                margin: 20px auto;
-                padding: 20px 0;
-                font-size: calc(1.3rem + 0.7vw);
-            }
-        }
-
-    }
+	body {
+		height: 100%;
+		.mainDisplay {
+			margin: 10% auto;
+			.sell,
+			.buy {
+				margin: 20px auto;
+				padding: 20px 0;
+				font-size: calc(1.3rem + 0.7vw);
+			}
+		}
+	}
 }
-
-
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
-
+	p.results {
+		overflow-x: scroll;
+	}
 }
