--- a/styles/sass/_menu.scss
+++ b/styles/sass/_menu.scss
@@ -1,47 +1,52 @@
 .modalContainer {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 5;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.596), rgba(255, 255, 255, 0.9)), url('../assets/pexels-gdtography-911738.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    .modalCenter {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-        width: 60%;
-        font-weight: 600;
-        text-align: center;
-        line-height: 170%;
-        font-size: calc(2rem + 0.7vw);
-        letter-spacing: 2px;
-        
-        .start {
-            background: black;
-            font-family: 'Squared', sans-serif;
-            font-size: calc(2rem + 1vw);
-            color: white;
-            padding: 1% 5%;
-            margin: 20px;
-            border: none;
-            border: 1px solid white;
-            border-radius: 5px;
-            transition: all 0.8s ease;
-            &:hover,
-            &:focus {
-                background: white;
-                color: black;
-                border: 1px solid black;
-            }
-        }
-    }
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 5;
+	background-image: linear-gradient(
+			rgba(0, 0, 0, 0.596),
+			rgba(255, 255, 255, 0.9)
+		),
+		url('../assets/pexels-gdtography-911738.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	.modalCenter {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		height: 100%;
+		width: 60%;
+		font-weight: 600;
+		text-align: center;
+		line-height: 170%;
+		font-size: calc(2rem + 0.7vw);
+		letter-spacing: 2px;
+
+		.start {
+			background: black;
+			font-family: 'Squared', sans-serif;
+			font-size: calc(2rem + 1vw);
+			color: white;
+			padding: 1% 5%;
+			margin: 20px;
+			margin-top: 15%;
+			border: none;
+			border: 1px solid white;
+			border-radius: 5px;
+			transition: all 0.8s ease;
+			&:hover,
+			&:focus {
+				background: white;
+				color: black;
+				border: 1px solid black;
+			}
+		}
+	}
 }
